:iphone: Fix grid gap unit - SHU-260

--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -427,13 +427,12 @@
 
 .youtubeList {
   display: grid;
-  grid-gap: 10px;
+  grid-gap: 20px;
   margin-top: 4%;
   
   @include m.mq(tabAndPc) {
     grid-template-columns: repeat(2, minmax(150px, 1fr));
     grid-template-rows: repeat(3, auto);
-    grid-gap: 20px;
   }
   @include m.mq(pc) {
     grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
